# touch-surface

./: .gitignore  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  DLibInterface.cpp  DLibInterface.h  Fuser.cpp  Fuser.hpp  HandModel.cpp  HandModel.h  HandPSO.cpp  HandPSO.h  HandPoseEstimator.cpp  HandPoseEstimator.h  HeatmapInterpreter.cpp  HeatmapInterpreter.h  RandomForest.cpp  RandomForest.h  TouchDetection.cpp  TouchDetection.h  Util.h  main.cpp  websocket_server.cpp  websocket_server.h
Inference/: CMakeLists.txt
Inference/cmake/: FindCaffe.cmake  FindGlog.cmake
Inference/include/: inference.hpp  io.hpp  preprocess.hpp
Inference/src/: CMakeLists.txt  inference.cpp  io.cpp  preprocess.cpp
Inference/tools/: CMakeLists.txt  main.cpp
experiments/: circle.csv  circle_userData.csv  keyboard.csv  line_horizontal.csv  line_horizontal_userData.csv  line_vertical.csv  line_vertical_userData.csv  point.csv  point_1.csv  point_1_userData_algo.csv  point_1_userData_naive.csv  point_userData.csv
htmlApp/: CMakeLists.txt  assignment.html  display.html  experiments.ods  keyboard.html  keyboard_alternative.html  keyboard_large.html  keyboard_small.html  keyboard_test.html  task_line_horizontal.html  task_line_vertical.html  task_m.html  task_point.html  test.html  websocket_example.cpp  writeFiles.py  writeFiles_old.py
htmlApp/data/: line_c_1_algo.txt  line_c_2_algo.txt  line_c_2_naive.txt  line_c_3_algo.txt  line_c_3_naive.txt  line_c_5_algo.txt  line_c_5_naive.txt  line_c_6_algo.txt  line_c_7_naive.txt  line_c_9_algo.txt  line_h_10_naive.txt  line_h_11_naive.txt  line_h_12_algo.txt  line_h_12_naive.txt  line_h_13_algo.txt  line_h_1_algo.txt  line_h_1_naive.txt  line_h_2_naive.txt  line_h_3_naive.txt  line_h_5_naive.txt  line_h_6_algo.txt  line_h_6_naive.txt  line_h_7_algo.txt  line_h_7_naive.txt  line_h_9_naive.txt  line_k_10_algo.txt  line_k_10_naive.txt  line_k_1_naive.txt  line_k_4_naive.txt  line_k_6_naive.txt  line_k_7_algo.txt  line_k_7_naive.txt  line_k_8_algo.txt  line_k_8_naive.txt  line_k_9_algo.txt  line_v_11_algo.txt  line_v_2_naive.txt  line_v_6_algo.txt  line_v_6_naive.txt  line_v_8_algo.txt  (+17 more)
htmlApp/records/: 1501703108.txt  1501703157.txt  1501703191.txt  1501703230.txt  1501703273.txt  1501703305.txt  1501703352.txt  1501703409.txt  1501703464.txt  1501703506.txt  1501703547.txt  1501703580.txt  1501703633.txt  1501703669.txt  1501703703.txt  1501703733.txt  1501703755.txt  1501703781.txt  1501703802.txt  1501703826.txt  1505153670.txt  cal.py
htmlApp/records/ali/mid/: 1501685528.txt  1501685548.txt  1501685580.txt  1501685602.txt  1501685618.txt  1501685639.txt  1501685688.txt  1501685714.txt  1501685758.txt  1501685791.txt  1501686102.txt  1501686171.txt  1501686202.txt  1501686225.txt  1501686263.txt  1501686304.txt  1501686335.txt  1501686370.txt  1501686414.txt  1501686446.txt
htmlApp/records/fan/mid/: 1501612445.txt  1501612471.txt  1501612510.txt  1501612562.txt  1501612597.txt  1501612646.txt  1501612682.txt  1501612741.txt  1501612783.txt  1501612814.txt  1501612841.txt  1501612879.txt  1501612935.txt  1501612956.txt  1501612999.txt  1501613049.txt  1501613095.txt  1501613166.txt  1501613211.txt  1501613244.txt
htmlApp/records/roy/large/: 1501700660.txt  1501700680.txt  1501700698.txt  1501700720.txt  1501700740.txt  1501700760.txt  1501700774.txt  1501700793.txt  1501700813.txt  1501700833.txt  1501700851.txt  1501700878.txt  1501700899.txt  1501700919.txt  1501700938.txt  1501700958.txt  1501700973.txt  1501700985.txt  1501701002.txt  1501701018.txt
htmlApp/records/sagnik/mid/: 1501697297.txt  1501697336.txt  1501697362.txt  1501697379.txt  1501697397.txt  1501697426.txt  1501697442.txt  1501697485.txt  1501697514.txt  1501697534.txt  1501697556.txt  1501697578.txt  1501697617.txt  1501697651.txt  1501697675.txt  1501697705.txt  1501697726.txt  1501697756.txt  1501697785.txt  1501697805.txt
htmlApp/records/shahira/mid/: 1501608692.txt  1501608752.txt  1501608820.txt  1501608891.txt  1501608956.txt  1501608990.txt  1501609015.txt  (+13 more)
htmlApp/templates/: keyboard.html
htmlApp/tests/: count_algo.txt  count_naive.txt  experiments  line_c_10_algo.txt  line_c_10_naive.txt  line_c_11_algo.txt  line_c_11_naive.txt  line_c_1_naive.txt  line_c_4_algo.txt  line_c_4_naive.txt  line_c_6_naive.txt  line_c_7_algo.txt  line_c_8_algo.txt  line_c_8_naive.txt  line_c_9_naive.txt  line_h_10_algo.txt  line_h_11_algo.txt  line_h_13_naive.txt  line_h_2_algo.txt  line_h_3_algo.txt  line_h_4_algo.txt  line_h_4_naive.txt  line_h_5_algo.txt  line_h_8_algo.txt  line_h_8_naive.txt  line_h_9_algo.txt  line_k_11_algo.txt  line_k_11_naive.txt  line_k_1_algo.txt  line_k_2_algo.txt  line_k_2_naive.txt  line_k_3_algo.txt  line_k_3_naive.txt  line_k_4_algo.txt  line_k_5_algo.txt  line_k_5_naive.txt  line_k_6_algo.txt  line_k_9_naive.txt  line_v_10_algo.txt  line_v_10_naive.txt  (+928 more)
math/: mat2x2.h  mat3x3.h  mat4x4.h  math_base.cpp  math_base.h  math_types.h  plane.h  quat.h  vec2.h  vec3.h  vec4.h
(+120 files in other folders)
